<resources>
    <string name="app_name">Ayu Companion</string>
    <string name="paw">paw</string>
    <string name="people">TODO</string>
    <string name="notify">notification_icon</string>
    <string name="hello">Hello</string>
    <string name="friends">Friends!</string>
    <string name="search">Search</string>
    <string name="todo">TODO</string>
    <string name="prakarti">Know about your Prakarti…</string>
    <string name="know_your_prakriti">Know Your Prakriti</string>
    <string name="imagep">ImageP</string>
    <string name="textP1">Everything in the universe – dead or alive – is connected.</string>
    <string name="textP2">If your mind, body, and spirit are in harmony with the universe, you have good health.</string>
    <string name="textP3">When something disrupts this balance, you get sick.</string>
    <string name="textP4">Among the things that can upset this balance are genetic or birth defects, injuries, climate and seasonal change, age, and your emotions.</string>
    <string name="textP5">Ayurveda believe every person is made of five basic elements found in the universe: space, air, fire, water, and earth.</string>
    <string name="textP6">These combine in the human body to form three life forces or energies, called doshas.</string>
    <string name="textP7">They are Vata dosha (space and air); Pitta dosha (fire and water); and Kapha dosha (water and earth).</string>
    <string name="food">Food</string>
    <string name="yoga">Yoga</string>
    <string name="meditation">Meditation</string>
    <string name="asanas">Asanas</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="corn">Corn</string>
    <string name="cnfacts">Properties:</string>
    <string name="calorie">Vitamin C</string>
    <string name="water">Folate</string>
    <string name="protein">Protein</string>
    <string name="carb">Magnesium</string>
    <string name="sugar">Potassium</string>
    <string name="fiber">Fiber</string>
    <string name="fat">Vitamin B1, Vitamin B9</string>
    <string name="eggplant">Eggplant</string>
    <string name="onion">Onions</string>
    <string name="what_is_meditation">Meditation is a mental exercise that involves relaxation, focus, and awareness</string>
    <string name="one_of_three"><b><i><u>Meditation</u> is practiced in one of three modes</i></b>:</string>
    <string name="m1"> <b>Concentration</b>: focusing attention on a single object, internal or external (focused attention meditation)</string>
    <string name="m2"> <b>Observation</b>: paying attention to whatever is predominant in your experience in the present moment, without allowing the attention to get stuck on any particular thing (open monitoring meditation)</string>
    <string name="m3"><b>Awareness</b>: allowing awareness to remain present, un-distracted and not engaged with either focusing or observing</string>
    <string name="m4">Specific benefit: improving your health, well-being, performance, focus.</string>
    <string name="m5">Growth: emotional healing, self-knowledge, self-discipline, letting go.</string>
    <string name="m6">Spirituality: connecting with God, inner peace, and other spiritual goals.</string>
    <string name="m7"> if practiced for as few as 10 minutes each day, can help you control stress, decrease anxiety, improve cardiovascular health, and achieve a greater capacity for relaxation.</string>
    <string name="m8">The first thing to clarify: What we’re doing here is aiming for mindfulness, not some process that magically wipes your mind clear of the countless and endless thoughts that erupt and ping constantly in our brains. We’re just practicing bringing our attention to our breath, and then back to the breath when we notice our attention has wandered.</string>
    <string name="m9">1) Take a seat<br/>
    Find a place to sit that feels calm and quiet to you.</string>
    <string name="m10">
    2) Set a time limit<br/>
    If you’re just beginning, it can help to choose a short time, such as five or 10 minutes.</string>
    <string name="m11">
    3) Notice your body<br/>
    You can sit in a chair with your feet on the floor, you can sit loosely cross-legged, you can kneel—all are fine. Just make sure you are stable and in a position you can stay in for a while.</string>
    <string name="m12">
    4) Feel your breath<br/>
    Follow the sensation of your breath as it goes in and as it goes out.</string>
    <string name="m13">5) Notice when your mind has wandered<br />
        Inevitably, your attention will leave the breath and wander to other places. When you get around to noticing that your mind has wandered—in a few seconds, a minute, five minutes—simply return your attention to the breath.</string>
    <string name="m14">6) Be kind to your wandering mind<br />
        Don’t judge yourself or obsess over the content of the thoughts you find yourself lost in. Just come back.</string>
    <string name="m15">7) Close with kindness
        When you’re ready, gently lift your gaze (if your eyes are closed, open them). Take a moment and notice any sounds in the environment. Notice how your body feels right now. Notice your thoughts and emotions.</string>
    <string name="apples">Apples</string>
    <string name="apricot">Apricot</string>
    <string name="avocado">Avocado</string>
    <string name="walnut">Walnut Oil</string>
    <string name="sunflower_oil">Sunflower Oil</string>
    <string name="olive_oil">Olive Oil</string>
    <string name="image">TODO</string>
    <string name="black_pepper">Black Pepper</string>
    <string name="coriander">Coriander</string>
    <string name="cumin">Cumin</string>
    <string name="ado_mukashvanasana">Ado-mukashvanasana</string>
    <string name="yoga1">Downward Dog Pose, Downward-facing Dog Pose,or Adho Mukha Shvanasana (Sanskrit: अधोमुखश्वानासन; IAST: Adho Mukha Śvānāsana), is an inversion asana in modern yoga as exercise, often practised as part of a flowing sequence of poses, especially Surya Namaskar, the Salute to the Sun.</string>
    <string name="effects">Effects:</string>
    <string name="yeffects">Downward Dog has positive effects on the musculoskeletal system. It stretches the hamstring and calf muscles in the backs of the legs, and builds strength in the shoulders.</string>
    <string name="akarna_dhanurasana">Akarna-Dhanurasana</string>
    <string name="yoga2">Akarna Dhanurasana (Sanskrit: आकर्ण धनुरासन; IAST: Ākarṇa Dhanurāsana), also called the Archer pose,[1] Bow and Arrow pose,[2] or Shooting Bow pose[1] is an asana in hatha yoga and modern yoga as exercise. The posture resembles an archer about to release an arrow.</string>
    <string name="description">Description</string>
    <string name="ydesc">Akarna Dhanurasana involves pulling the foot towards the ear from a seated position with the legs outstretched.</string>
    <string name="anantasana">Anantasana</string>
    <string name="yoga3">Anantasana (Sanskrit: अनन्तासन; IAST: Anantāsana), Sleeping Vishnu Pose or Vishnu\'s Couch Pose,[1] Eternal One\'s Pose, or Side-Reclining Leg Lift[2] is an asana in modern yoga as exercise.</string>
    <string name="ardha_chandrasana">Ardha-Chandrasana</string>
    <string name="yoga4">Ardha Chandrasana (Sanskrit: अर्धचन्द्रासन; IAST: ardha candrāsana) or Half Moon Pose[1] is a standing asana in modern yoga as exercise.</string>
    <string name="yogdesc">The pose is entered from Trikonasana (triangle pose), stretching up with the rear leg and out with the front hand so that only the fingertips remain on the ground. The gaze is directed at the upper hand.[6][7] However, Iyengar describes the pose with the upper hand resting on the hip.[8] The pose helps to strengthen the ankles and improve balance.[6]</string>
    <string name="ardhar_dhwabhujangasana">Ardhar-Dhwabhujangasana</string>
    <string name="textP8">Kapha types have strong frames and are naturally athletic as long they are exercising regularly to manage their tendency to gain weight. The influence of the earth and water elements makes them innately stable, compassionate, and loyal. They appreciate doing things in a methodical, step-by-step manner, and prefer a regular routine in their personal and professional lives. When imbalanced they can become unmotivated, stubborn, and complacent even when change is necessary. Their metabolism tends to be slow and their appetite for both food and stimulation is less intense than vata or pitta types. They benefit from exposing themselves to new environments, people, and occasionally fasting.</string>
    <string name="textP9">Pitta types are dominated by the fire element, which makes them innately strong, intense, and irritable. They tend to have a medium build and endurance with powerful musculature. They often have freckled skin that easily reddens in the sun, during exercise, massage, and when blushing. They are strong willed and good at doing what they think is right. They approach work and play with the same intensity and competitiveness. They are natural leaders and quick learners whose ability to easily comprehend and master new skills and concepts can make them judgmental or impatient toward people they feel are slower or less focused than themselves. They have strong digestion and intense appetites, both for food and challenges. If they miss a meal they are likely to become grumpy and may take a “bite” out of somebody instead. It is common for them to suffer from health conditions such as inflammation, rashes, acne, and loose stool. For balance, pittas need to manage their “fiery” tendencies, channeling them in productive ways and learning to recognize their destructive power.</string>
    <string name="textP10">Vata types tend to be thin and lanky. They are very mentally and physically active and enjoy creative endeavors, meeting new people, and traveling to new places. When they are balanced, vatas are flexible, have lively imaginations, and are original thinkers. When imbalanced they can get anxious, ungrounded, and can seem “flaky” about fulfilling commitments, sticking to a routine, and completing projects. They tend to run cold and dry and enjoy warm, humid weather. It’s common for vata types to experience cold hands and feet, constipation, dry skin, and cracking joints. The influence of the air element in their constitution causes their energy, mood, and appetite to fluctuate dramatically. For this reason vata types often fail to eat and sleep regularly, swinging from eating heavy foods to ground and sedate themselves, or ingesting stimulants like coffee and sugar to sustain intense physical or mental activity. Insomnia and low immunity are very common problem for the sensitive vata person.</string>
    <string name="winters">Winters</string>
    <string name="best_time_to_eat">Best time to Eat</string>
    <string name="properties">Properties</string>
    <string name="fibre">-Fibre</string>
    <string name="benefits">Benefits</string>
    <string name="manganese">-Manganese</string>
    <string name="iron">-Iron</string>
    <string name="calcium">-Calcium</string>
    <string name="anti_oxidants">-Anti Oxidants</string>
    <string name="steps_to_follow_for_meditation">Steps to follow for Meditation</string>
    <string name="decrease_inflamation">-Decrease inflamation</string>
    <string name="blood_sugar_control">-Blood Sugar Control</string>
    <string name="lower_cholestrol">-Lower Cholestrol</string>
    <string name="gut_bacteria">-Gut Bacteria</string>
    <string name="gut_health">-Gut Health</string>
    <string name="pain_reief">-Pain Reief</string>
    <string name="vitamin_k">-Vitamin K</string>
    <string name="copper">-Copper</string>
    <string name="breakfast">Breakfast</string>
    <string name="autumn">Autumn</string>
    <string name="monsoon">Monsoon</string>
    <string name="spring">Spring</string>
    <string name="summer">Summer</string>
</resources>