<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/ltt"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:isScrollContainer="true"
    android:orientation="vertical"
    android:overScrollMode="always"
    android:paddingLeft="10dp"
    android:paddingRight="10dp"
    android:scrollbarAlwaysDrawVerticalTrack="true">

    <LinearLayout
        android:id="@+id/lt"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:clickable="true"
        android:focusable="true"
        android:orientation="vertical">

        <TextView
            android:id="@+id/t10"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="100dp"
            android:layout_marginLeft="100dp"
            android:layout_marginTop="30dp"
            android:text="@string/know_your_prakriti"
            android:textSize="25sp" />

        <ImageView
            android:id="@+id/course_img"
            android:layout_width="150dp"
            android:layout_height="150dp"
            android:layout_gravity="center"
            android:layout_marginTop="20dp"
            android:contentDescription="@string/imagep"
            android:src="@drawable/prakartii" />

        <TextView
            android:id="@+id/t111"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginTop="10dp"
            android:fontFamily="sans-serif-black"
            android:text="@string/textP1"
            android:visibility="invisible" />

        <TextView
            android:id="@+id/t112"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginTop="10dp"
            android:fontFamily="sans-serif-black"
            android:text="@string/textP2"
            android:visibility="invisible" />

        <TextView
            android:id="@+id/t113"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginTop="10dp"
            android:fontFamily="sans-serif-black"
            android:text="@string/textP3"
            android:visibility="invisible" />

        <TextView
            android:id="@+id/t114"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginTop="10dp"
            android:fontFamily="sans-serif-black"
            android:text="@string/textP4"
            android:visibility="invisible" />

        <TextView
            android:id="@+id/t115"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginTop="10dp"
            android:fontFamily="sans-serif-black"
            android:text="@string/textP5"
            android:visibility="invisible" />

        <TextView
            android:id="@+id/t116"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginTop="10dp"
            android:fontFamily="sans-serif-black"
            android:text="@string/textP6"
            android:visibility="invisible" />

        <TextView
            android:id="@+id/t117"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginTop="10dp"
            android:fontFamily="sans-serif-black"
            android:text="@string/textP7"
            android:visibility="invisible" />

        <TextView
            android:id="@+id/t118"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginTop="10dp"
            android:fontFamily="sans-serif-black"
            android:text="@string/textP8"
            android:visibility="invisible" />

        <TextView
            android:id="@+id/t119"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginTop="10dp"
            android:fontFamily="sans-serif-black"
            android:text="@string/textP9"
            android:visibility="invisible" />

        <TextView
            android:id="@+id/t120"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginTop="10dp"
            android:fontFamily="sans-serif-black"
            android:text="@string/textP10"
            android:visibility="invisible" />
    </LinearLayout>

</ScrollView>