<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".food.Blackpepper">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_margin="15dp">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">
            <ImageView
                android:layout_width="match_parent"
                android:layout_height="230dp"
                android:src="@drawable/blackpepper"
                android:layout_marginHorizontal="10dp"
                android:layout_marginVertical="10dp"/>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:text="@string/black_pepper"
                android:textSize="50sp"
                android:textStyle="bold" />
            <TextView
                android:id="@+id/textView18"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="Seasons"
                android:textColor="#000000"
                android:textSize="30sp" />

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <ImageView
                    android:id="@+id/imageView4"
                    android:layout_width="75dp"
                    android:layout_height="75dp"
                    android:layout_weight="1"
                    android:src="@drawable/summer" />

                <ImageView
                    android:id="@+id/imageView10"
                    android:layout_width="75dp"
                    android:layout_height="75dp"
                    android:layout_weight="1"
                    android:src="@drawable/spring" />

                <ImageView
                    android:id="@+id/imageView11"
                    android:layout_width="75dp"
                    android:layout_height="75dp"
                    android:layout_weight="1"
                    android:src="@drawable/monsoon" />

                <ImageView
                    android:id="@+id/imageView12"
                    android:layout_width="75dp"
                    android:layout_height="75dp"
                    android:layout_weight="1"
                    android:src="@drawable/autumn" />

                <ImageView
                    android:id="@+id/imageView5"
                    android:layout_width="75dp"
                    android:layout_height="75dp"
                    android:layout_weight="1"
                    tools:src="@drawable/winter" />

            </LinearLayout>

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="0dp"
                android:layout_weight="1"
                android:orientation="horizontal">

                <TextView
                    android:id="@+id/textView28"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="@string/summer"
                    android:textColor="#A3000000"
                    android:textSize="21sp" />

                <TextView
                    android:id="@+id/textView53"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="@string/spring"
                    android:textColor="#A3000000"
                    android:textSize="21sp" />

                <TextView
                    android:id="@+id/textView54"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="@string/monsoon"
                    android:textColor="#A3000000"
                    android:textSize="21sp" />

                <TextView
                    android:id="@+id/textView55"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="@string/autumn"
                    android:textColor="#A3000000"
                    android:textSize="21sp" />

                <TextView
                    android:id="@+id/textView19"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="@string/winters"
                    android:textColor="#A3000000"
                    android:textSize="21sp" />
            </LinearLayout>

            <TextView
                android:id="@+id/textView20"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/best_time_to_eat"
                android:textColor="#000000"
                android:textSize="30sp" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="horizontal">

                <ImageView
                    android:id="@+id/imageView4"
                    android:layout_width="0dp"
                    android:layout_height="80dp"
                    android:layout_weight="1"
                    android:src="@drawable/breakfast"
                    tools:ignore="DuplicateIds" />

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="horizontal">

                <TextView
                    android:id="@+id/textView31"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="@string/breakfast"
                    android:textColor="#83000000"
                    android:textSize="24sp" />

            </LinearLayout>

            <TextView
                android:id="@+id/textView30"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/properties"
                android:textColor="#000000"
                android:textSize="30sp" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="vertical"
                android:paddingLeft="20dp">

                <TextView
                    android:id="@+id/textView21"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/fibre"
                    android:textColor="#000000"
                    android:textSize="24sp"
                    tools:ignore="DuplicateIds" />

                <TextView
                    android:id="@+id/textView29"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/calcium"
                    android:textColor="#000000"
                    android:textSize="24sp"
                    tools:ignore="DuplicateIds" />

                <TextView
                    android:id="@+id/textView23"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/copper"
                    android:textColor="#000000"
                    android:textSize="24sp" />

                <TextView
                    android:id="@+id/textView25"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/manganese"
                    android:textColor="#000000"
                    android:textSize="24sp" />

                <TextView
                    android:id="@+id/textView27"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/iron"
                    android:textColor="#000000"
                    android:textSize="24sp" />

                <TextView
                    android:id="@+id/textView58"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/vitamin_k"
                    android:textColor="#000000"
                    android:textSize="24sp" />

                <TextView
                    android:id="@+id/textView61"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/anti_oxidants"
                    android:textColor="#000000"
                    android:textSize="24sp" />
            </LinearLayout>

            <TextView
                android:id="@+id/textView33"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/benefits"
                android:textColor="#000000"
                android:textSize="30sp" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="vertical"
                android:paddingLeft="20dp">

                <TextView
                    android:id="@+id/textView41"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/decrease_inflamation"
                    android:textColor="#000000"
                    android:textSize="24sp" />

                <TextView
                    android:id="@+id/textView22"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/blood_sugar_control"
                    android:textColor="#000000"
                    android:textSize="24sp" />

                <TextView
                    android:id="@+id/textView42"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/lower_cholestrol"
                    android:textColor="#000000"
                    android:textSize="24sp" />

                <TextView
                    android:id="@+id/textView24"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/gut_bacteria"
                    android:textColor="#000000"
                    android:textSize="24sp" />

                <TextView
                    android:id="@+id/textView43"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/gut_health"
                    android:textColor="#000000"
                    android:textSize="24sp" />

                <TextView
                    android:id="@+id/textView34"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/pain_reief"
                    android:textColor="#000000"
                    android:textSize="24sp" />

            </LinearLayout>


        </LinearLayout>
    </ScrollView>

</FrameLayout>